kustomization/overlays/prod/grafana-mcp/networkpolicy/allow-to-grafana.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-to-grafana-networkpolicy
spec:
  egress:
    - ports:
        - port: grafana
      to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
          podSelector:
            matchLabels:
              app.kubernetes.io/name: grafana
  podSelector:
    matchLabels:
      app.kubernetes.io/name: grafana-mcp
  policyTypes:
    - Egress
